[INFER] Make sure to get the topmost scripted frame's pc in ContextStack::currentScript, bug 662562.